
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int perror (char*) ;
 int recv (int,char*,size_t,int ) ;

int new_recv (int fd, char *buff, size_t len)
{
       int ret;

       if ((ret = recv (fd, buff, len, 0)) <= 0) {
               perror ("new_recv");
               return -1;
       }

       return ret;
}
